# markdown-splitter-cli

./: .gitignore  Cargo.toml  README.md  commands.md
src/: cli.rs  error.rs  lib.rs  main.rs  types.rs
src/services/: fetcher.rs  mod.rs  parser.rs  splitter.rs
