[package]
name = "markdown-splitter"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "md-split"
path = "src/main.rs"

[dependencies]
# CLI and argument parsing
clap = { version = "4.0", features = ["derive"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client for URL fetching
reqwest = { version = "0.11", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File operations and path handling
walkdir = "2.3"

# Regex for markdown parsing
regex = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# URL validation
url = "2.3"

# File system operations
fs_extra = "1.3"

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }